# BoringServer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BATCH_PROCESSING_SUMMARY.md  DOCKERHUB_READY.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  HOW_TO_ADD_DOCKERHUB_WORKFLOW.md  HOW_TO_ADD_GITHUB_ACTIONS.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  WORKFLOW_UPDATE_DISK_FIX.md  batch_service.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  service.py
.github/workflows/: ci.yml
configs/: base.yaml  dev.yaml  prod.yaml
docs/: API.md  BATCH_PROCESSING.md  BATCH_PROCESSING_QUICKSTART.md  DOCKER_DEPLOYMENT.md  DOCKER_HUB_SETUP.md  DOCKER_HUB_SUMMARY.md
engine/: __init__.py  config.py  exceptions.py  loader.py  logging.py  metrics.py  queue.py  types.py  utils.py
models/clip/: config.json  model.py
models/flava_classifier/: config.json  model.py
scripts/: create_test_dataset.py  docker-run.sh  test-api.sh
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_loader.py  test_queue.py  test_types.py  test_utils.py
